# caxton

./: .coderabbit.yaml  .dockerignore  .gitignore  .markdownlint.yaml  .mergify.yml  .pre-commit-config.yaml  .rustfmt.toml  .zellij.kdl  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  DEVELOPMENT_ROADMAP.md  DIALOGUE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.md  Gemfile  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE-APACHE  MIGRATION_PLAN.md  PLANNING.md  README.md  README_TESTING.md  ROADMAP.md  SECURITY.md  VALIDATION_CHECKLIST.md  _config.yml  add-frontmatter-to-source-adrs.sh  adr.md  bacon.toml  build.rs  check_lint.sh  deny.toml  docker-compose.yml  (+7 more)
.cargo/: audit.toml  config.toml
.claude/: MEMORY_VERIFICATION_CHECKLIST.md  branch.info  settings.json  tdd.green  tdd.red
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.well-known/: security.txt
_adrs/: 0001-observability-first-architecture.md  0002-webassembly-for-agent-isolation.md  0003-fipa-messaging-protocol.md  0004-minimal-core-philosophy.md  0005-mcp-for-external-tools.md  0006-application-server-architecture.md  0007-management-api-design.md  0009-cli-tool-design.md  0010-external-agent-routing-api.md  README.md
_includes/: footer.html  head.html  navigation.html
_layouts/: adr-index.html  adr.html  default.html  home.html
_sass/: adr.scss
adr/: index.html
benches/: agent_spawn.rs  message_routing.rs  wasm_execution.rs
config/: caxton.yaml  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ARCHITECTURE.md  EVENT_MODEL.md  PLANNING.md  README.md  REQUIREMENTS_ANALYSIS.md  STYLE_GUIDE.md  TESTING.md  _config.yml  architecture-review-report.md  caxton-fixes-summary.md  caxton-website-audit-framework.md  caxton-website-audit-report.md  devops-security-guide.md  domain-types.md  performance_and_safety_metrics.md  test-code-formatting.md  type_system_improvements_report.md  wasm-runtime-architecture.md
examples/: agent_lifecycle_demo.rs  lifecycle_example.rs
lib/: caxton.ex  caxton_web.ex
migrations/: 001_initial.sql  002_create_agent_registry.sql  003_create_message_storage.sql  004_create_conversations.sql  005_create_conversation_participants.sql
proptest-regressions/: database.txt
scripts/: add-adr-frontmatter.sh  check-no-allows.sh  claude  dclaude  git  release
src/: agent.rs  agent_lifecycle_manager.rs  ci_pipeline.rs  database.rs  deployment_manager.rs  domain.rs  domain_types.rs  error.rs  fipa.rs  host_functions.rs  hot_reload_manager.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  observability.rs  resource_manager.rs  rest_api.rs  runtime.rs  sandbox.rs  security.rs  server.rs  storage.rs  time_provider.rs  utils.rs  wasm.rs  wasm_module_validator.rs
test/: test_helper.exs
tests/: agent_lifecycle_manager_test.rs  agent_registry_storage_test.rs  basic_message_router.rs  cli_integration.rs  code_quality_enforcement.rs  code_quality_test.rs  conversation_storage_test.rs  deployment_manager_test.proptest-regressions  deployment_manager_test.rs  health_endpoint_test.rs  health_performance_test.rs  hot_reload_manager_test.rs  integration_domain_lifecycle.rs  lifecycle_integration_test.rs  (+9 more)
(+676 files in other folders)
