[package]
name = "caxton"
version = "0.2.0"
edition = "2024"
authors = ["John Wilger <john.wilger@gmail.com>"]
description = "An application server hosting AI Agents and secure, WASM MCP tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jwilger/caxton"
homepage = "https://github.com/jwilger/caxton"
documentation = "https://docs.rs/caxton"
readme = "README.md"
keywords = ["wasm", "agent", "runtime", "mcp", "ai", "llm"]
categories = ["wasm", "ai", "server"]

[lints.rust]
warnings = "deny"
missing_docs = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[[bin]]
name = "caxton"
path = "src/main.rs"

[lib]
name = "caxton"
path = "src/lib.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]

[dev-dependencies]

[profile.bench]
inherits = "release"
